--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial scale=1.0">
-    <title>Odin Recipes Project</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial scale=1.0">
+        <title>Odin Recipes Project</title>
+        <h1>Odin Recipes</h1>
+    </head>
     <body>
-        <head><h1>Odin Recipes</h1></head>
+        <a href="recipes/bread.html">Bread</a>
 
         
     </body>
