--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
         <h1>Odin Recipes</h1>
     </head>
     <body>
-        <a href="recipes/bread.html">Bread</a>
+        <ul>
+            <li><a href="recipes/bread.html">Bread</a></li>
+            <li></li>
+            <li></li>
 
-        
+        </ul>
     </body>
     
 </html>
